ffi/include/rfe.h

/**
 * Result code returned by fallible `rfe-ffi` functions.
 */
typedef enum Result {
  /**
   * The function completed successfully.
   */
  RESULT_SUCCESS = 0,
  /**
   * The connected device reported unsupported or incompatible firmware.
   */
  RESULT_INCOMPATIBLE_FIRMWARE_ERROR,
  /**
   * An argument was invalid, such as an out-of-range value or undersized buffer.
   */
  RESULT_INVALID_INPUT_ERROR,
  /**
   * The requested operation is not valid for the current device state.
   */
  RESULT_INVALID_OPERATION_ERROR,
  /**
   * A serial port or operating system I/O error occurred.
   */
  RESULT_IO_ERROR,
  /**
   * The requested data has not been received from the device.
   */
  RESULT_NO_DATA,
  /**
   * A required pointer argument was `NULL`.
   */
  RESULT_NULL_PTR_ERROR,
  /**
   * The device did not respond before the operation timed out.
   */
  RESULT_TIMEOUT_ERROR,
} Result;
typedef uint8_t Mode;
typedef uint8_t CalcMode;
/**
 * RF Explorer spectrum analyzer device.
 */
typedef struct SpectrumAnalyzer SpectrumAnalyzer;
/**
 * Writes the connected serial port name to a caller-provided buffer.
 *
 * Use `rfe_spectrum_analyzer_port_name_len` to get the required buffer size,
 * including the terminating null byte.
 */
enum Result rfe_spectrum_analyzer_port_name(const struct SpectrumAnalyzer *rfe,
                                            char *port_name_buf,
                                            uintptr_t buf_len);
/**
 * Returns the buffer size required for `rfe_spectrum_analyzer_port_name`.
 *
 * The returned size includes the terminating null byte. Returns zero if `rfe`
 * is `NULL`.
 */
uintptr_t rfe_spectrum_analyzer_port_name_len(const struct SpectrumAnalyzer *rfe);
/**
 * Writes the firmware version to a caller-provided buffer.
 *
 * Use `rfe_spectrum_analyzer_firmware_version_len` to get the required buffer
 * size, including the terminating null byte.
 */
enum Result rfe_spectrum_analyzer_firmware_version(const struct SpectrumAnalyzer *rfe,
                                                   char *firmware_version_buf,
                                                   uintptr_t buf_len);
/**
 * Returns the buffer size required for `rfe_spectrum_analyzer_firmware_version`.
 *
 * The returned size includes the terminating null byte. Returns zero if `rfe`
 * is `NULL`.
 */
uintptr_t rfe_spectrum_analyzer_firmware_version_len(const struct SpectrumAnalyzer *rfe);
/**
 * Writes the device serial number to a caller-provided buffer.
 *
 * Use `rfe_spectrum_analyzer_serial_number_len` to get the required buffer
 * size, including the terminating null byte. Returns `RESULT_NO_DATA` if the
 * device does not report a serial number.
 */
enum Result rfe_spectrum_analyzer_serial_number(const struct SpectrumAnalyzer *rfe,
                                                char *serial_number_buf,
                                                uintptr_t buf_len);
/**
 * Returns the buffer size required for `rfe_spectrum_analyzer_serial_number`.
 *
 * The returned size includes the terminating null byte. Returns zero if `rfe`
 * is `NULL` or no serial number has been received.
 */
uintptr_t rfe_spectrum_analyzer_serial_number_len(const struct SpectrumAnalyzer *rfe);
/**
 * Turns the spectrum analyzer LCD on.
 */
enum Result rfe_spectrum_analyzer_lcd_on(const struct SpectrumAnalyzer *rfe);
/**
 * Turns the spectrum analyzer LCD off.
 */
enum Result rfe_spectrum_analyzer_lcd_off(const struct SpectrumAnalyzer *rfe);
/**
 * Enables screen dump messages from the spectrum analyzer.
 */
enum Result rfe_spectrum_analyzer_enable_dump_screen(const struct SpectrumAnalyzer *rfe);
/**
 * Disables screen dump messages from the spectrum analyzer.
 */
enum Result rfe_spectrum_analyzer_disable_dump_screen(const struct SpectrumAnalyzer *rfe);
/**
 * Holds the current spectrum analyzer sweep.
 */
enum Result rfe_spectrum_analyzer_hold(const struct SpectrumAnalyzer *rfe);
/**
 * Reboots the spectrum analyzer.
 *
 * The `rfe` pointer must not be used after a successful reboot unless the
 * device is reconnected.
 */
enum Result rfe_spectrum_analyzer_reboot(struct SpectrumAnalyzer *rfe);
/**
 * Powers off the spectrum analyzer.
 *
 * The `rfe` pointer must not be used after a successful power-off unless the
 * device is reconnected.
 */
enum Result rfe_spectrum_analyzer_power_off(struct SpectrumAnalyzer *rfe);
/**
 * Returns the current sweep start frequency in hertz.
 */
uint64_t rfe_spectrum_analyzer_start_freq_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the current sweep step size in hertz.
 */
uint64_t rfe_spectrum_analyzer_step_size_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the current sweep stop frequency in hertz.
 */
uint64_t rfe_spectrum_analyzer_stop_freq_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the current sweep center frequency in hertz.
 */
uint64_t rfe_spectrum_analyzer_center_freq_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the current sweep span in hertz.
 */
uint64_t rfe_spectrum_analyzer_span_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the active radio module's minimum supported frequency in hertz.
 */
uint64_t rfe_spectrum_analyzer_min_freq_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the active radio module's maximum supported frequency in hertz.
 */
uint64_t rfe_spectrum_analyzer_max_freq_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the active radio module's maximum supported span in hertz.
 */
uint64_t rfe_spectrum_analyzer_max_span_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the resolution bandwidth in hertz.
 *
 * Returns zero if the device has not reported a resolution bandwidth.
 */
uint64_t rfe_spectrum_analyzer_rbw_hz(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the bottom displayed amplitude in dBm.
 */
int16_t rfe_spectrum_analyzer_min_amp_dbm(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the top displayed amplitude in dBm.
 */
int16_t rfe_spectrum_analyzer_max_amp_dbm(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the amplitude offset in dB.
 *
 * Returns zero if the device has not reported an amplitude offset.
 */
int8_t rfe_spectrum_analyzer_amp_offset_db(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the number of points in each sweep.
 */
uint16_t rfe_spectrum_analyzer_sweep_len(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the current operating mode.
 */
Mode rfe_spectrum_analyzer_mode(const struct SpectrumAnalyzer *rfe);
/**
 * Returns the current calculator mode.
 *
 * Returns the enum default if the device has not reported a calculator mode.
 */
CalcMode rfe_spectrum_analyzer_calc_mode(const struct SpectrumAnalyzer *rfe);