ffi/include/NativeMethods.g.cs


        /// <summary>
        ///  Writes the connected serial port name to a caller-provided buffer.
        ///
        ///  Use `rfe_spectrum_analyzer_port_name_len` to get the required buffer size,
        ///  including the terminating null byte.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_port_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_port_name(SpectrumAnalyzer* rfe, byte* port_name_buf, nuint buf_len);

        /// <summary>
        ///  Returns the buffer size required for `rfe_spectrum_analyzer_port_name`.
        ///
        ///  The returned size includes the terminating null byte. Returns zero if `rfe`
        ///  is `NULL`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_port_name_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint rfe_spectrum_analyzer_port_name_len(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Writes the firmware version to a caller-provided buffer.
        ///
        ///  Use `rfe_spectrum_analyzer_firmware_version_len` to get the required buffer
        ///  size, including the terminating null byte.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_firmware_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_firmware_version(SpectrumAnalyzer* rfe, byte* firmware_version_buf, nuint buf_len);

        /// <summary>
        ///  Returns the buffer size required for `rfe_spectrum_analyzer_firmware_version`.
        ///
        ///  The returned size includes the terminating null byte. Returns zero if `rfe`
        ///  is `NULL`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_firmware_version_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint rfe_spectrum_analyzer_firmware_version_len(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Writes the device serial number to a caller-provided buffer.
        ///
        ///  Use `rfe_spectrum_analyzer_serial_number_len` to get the required buffer
        ///  size, including the terminating null byte. Returns `RESULT_NO_DATA` if the
        ///  device does not report a serial number.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_serial_number", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_serial_number(SpectrumAnalyzer* rfe, byte* serial_number_buf, nuint buf_len);

        /// <summary>
        ///  Returns the buffer size required for `rfe_spectrum_analyzer_serial_number`.
        ///
        ///  The returned size includes the terminating null byte. Returns zero if `rfe`
        ///  is `NULL` or no serial number has been received.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_serial_number_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint rfe_spectrum_analyzer_serial_number_len(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Turns the spectrum analyzer LCD on.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_lcd_on", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_lcd_on(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Turns the spectrum analyzer LCD off.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_lcd_off", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_lcd_off(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Enables screen dump messages from the spectrum analyzer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_enable_dump_screen", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_enable_dump_screen(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Disables screen dump messages from the spectrum analyzer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_disable_dump_screen", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_disable_dump_screen(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Holds the current spectrum analyzer sweep.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_hold", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_hold(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Reboots the spectrum analyzer.
        ///
        ///  The `rfe` pointer must not be used after a successful reboot unless the
        ///  device is reconnected.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_reboot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_reboot(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Powers off the spectrum analyzer.
        ///
        ///  The `rfe` pointer must not be used after a successful power-off unless the
        ///  device is reconnected.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_power_off", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_power_off(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the current sweep start frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_start_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_start_freq_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the current sweep step size in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_step_size_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_step_size_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the current sweep stop frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_stop_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_stop_freq_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the current sweep center frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_center_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_center_freq_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the current sweep span in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_span_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_span_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the active radio module's minimum supported frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_min_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_min_freq_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the active radio module's maximum supported frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_max_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_max_freq_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the active radio module's maximum supported span in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_max_span_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_max_span_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the resolution bandwidth in hertz.
        ///
        ///  Returns zero if the device has not reported a resolution bandwidth.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_rbw_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_rbw_hz(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the bottom displayed amplitude in dBm.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_min_amp_dbm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern short rfe_spectrum_analyzer_min_amp_dbm(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the top displayed amplitude in dBm.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_max_amp_dbm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern short rfe_spectrum_analyzer_max_amp_dbm(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the amplitude offset in dB.
        ///
        ///  Returns zero if the device has not reported an amplitude offset.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_amp_offset_db", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern sbyte rfe_spectrum_analyzer_amp_offset_db(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the number of points in each sweep.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_sweep_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ushort rfe_spectrum_analyzer_sweep_len(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the current operating mode.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_mode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Mode rfe_spectrum_analyzer_mode(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the current calculator mode.
        ///
        ///  Returns the enum default if the device has not reported a calculator mode.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_calc_mode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern CalcMode rfe_spectrum_analyzer_calc_mode(SpectrumAnalyzer* rfe);
